# chunkvarl

./: .gitignore  README.md  calc_dry.py  pyproject.toml  tasks.py
src/chunkvarl/: calc_dry.py  plotting.py  stealing_valuables.py  wiki.py
tests/: conftest.py  test_calc_dry.py  test_stealing_valuables.py
tests/data/: invalid_rates.csv  varl_thieving.csv
